# OpenGL_2025

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: _fixes.hpp.22652F48CD1D6ECC.idx  _vectorize.hpp.BFCB67F805D27CF0.idx  batch.cpp.739A22EA3EC6333E.idx  common.hpp.B9B7F2F4019E7B95.idx  compute_common.hpp.13A293F62CBAFE38.idx  compute_vector_relational.hpp.C54DF8368805CC58.idx  constants.hpp.1F457CC19814C71A.idx  constants.inl.CA9247893172CEDD.idx  context.c.6FA14A3A904A7820.idx  defines.cpp.A2426399DDA7E754.idx  defines.hpp.8415CEAB6C6EE248.idx  dual_quaternion.hpp.74ECA0F988620863.idx  dual_quaternion.inl.631338418D51A15B.idx  ebo.cpp.98984839A50C8FAA.idx  ebo.hpp.5617DEC293958692.idx  egl_context.c.0923EE461D5BDA69.idx  epsilon.hpp.F603B3492F1B46A2.idx  epsilon.inl.AD62EBD8945FAF10.idx  exponential.hpp.B6378C5EFD459C8E.idx  fileio.cpp.4D2DC24CFA67090F.idx  fileio.hpp.60CDE179234F5034.idx  func_common.inl.A9126D089E3E9B41.idx  func_exponential.inl.DA61DC06339AA108.idx  func_geometric.inl.4C0A774D91971701.idx  func_integer.inl.3028F6DCED7C2301.idx  func_matrix.inl.E7BAE2D7C33C04C6.idx  func_packing.inl.0228E2E583605E14.idx  func_trigonometric.inl.A4687C135052A35B.idx  func_vector_relational.inl.86668FE693686A04.idx  fwd.hpp.1A813288DFBB875D.idx  geometric.hpp.AE367A4566444A8F.idx  gl.c.36CC40C03CC44D76.idx  gl.h.F197FF80A86B8DAC.idx  glfw3.h.75C5DC10D56455F5.idx  glfw3native.h.19A94A9742D4465B.idx  glm.cpp.E91EF23D544AB725.idx  glm.hpp.139DA65AE2A6F434.idx  imageData.hpp.9F8FD2B9C7934F7B.idx  init.c.C247B39F3DA823F9.idx  input.c.A249D7034FE78012.idx  (+207 more)
data/shader/advanced/: materialssbo.frag  materialssbo.vert  matrixssbo.frag  matrixssbo.vert
data/shader/basic/: MultiBindlessTexture.frag  MultiBindlessTexture.vert  default.frag  default.vert  defaultTexture.frag  defaultTexture.vert
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: gl.h
include/: defines.hpp  shader.hpp
include/buffers/: ebo.hpp  imageData.hpp  material.hpp  mesh.hpp  ssbo.hpp  texture.hpp  vao.hpp  vbo.hpp  vertex.hpp
include/ecs/: componentmanager.hpp  componentstorage.hpp  entitycomponentsystem.hpp  entitycreatesystem.hpp  entitycreatesystemmanager.hpp  entityidgenerator.hpp  system.hpp  systemmanager.hpp
include/util/: fileio.hpp  resourcemanager.hpp
src/: defines.cpp  main.cpp  shader.cpp
src/buffers/: ebo.cpp  mesh.cpp  ssbo.cpp  texture.cpp  vao.cpp  vbo.cpp
src/ecs/: entityidgenerator.cpp
src/util/: fileio.cpp  resourcemanager.cpp
